fixed scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,3 +261,7 @@ input[type=submit] {
 	font-weight: bold;
 	cursor: pointer;	
 }
+
+html {
+  overflow-y: scroll;
+}
